
   exten => s,n,Set(CHANNEL(echocan_mode)=off)

   The possible values are:

     on - normal mode (the echo canceller is actually reinitialized)
     off - disabled
     fax - FAX/data mode (NLP disabled if possible, otherwise completely
           disabled)
     voice - voice mode (returns from FAX mode, reverting the changes that
             were made when FAX mode was requested)

Queue changes
-------------
  * A new option, 'I' has been added to both app_queue and app_dial.
    By setting this option, Asterisk will not update the caller with
    connected line changes or redirecting party changes when they occur.

mISDN channel driver (chan_misdn) changes
----------------------------------------
  * Added display_connected parameter to misdn.conf to put a display string
    in the CONNECT message containing the connected name and/or number if
    the presentation setting permits it.
  * Added display_setup parameter to misdn.conf to put a display string
    in the SETUP message containing the caller name and/or number if the
    presentation setting permits it.
  * Made misdn.conf parameters localdialplan and cpndialplan take a -1 to
    indicate the dialplan settings are to be obtained from the asterisk
    channel.
  * Made misdn.conf parameter callerid accept the "name" <number> format
    used by the rest of the system.
  * Made use the nationalprefix and internationalprefix misdn.conf
    parameters to prefix any received number from the ISDN link if that
    number has the corresponding Type-Of-Number.  NOTE:  This includes
    comparing the incoming call's dialed number against the MSN list.
  * Added the following new parameters: unknownprefix, netspecificprefix,
    subscriberprefix, and abbreviatedprefix in misdn.conf to prefix any
    received number from the ISDN link if that number has the corresponding
    Type-Of-Number.
  * Added new dialplan application misdn_command which permits controlling
    the CCBS/CCNR functionality.